--- a/css/drum-machine-full-page.css
+++ b/css/drum-machine-full-page.css
@@ -1,3 +1,9 @@
+#drum-body {
+  margin-top: 150px;
+}
+#drum-machine{
+  top: 75px;
+}
 .grid-container {
   border-radius: 10px;
 }
